# bobiverse-dict

./: .gitignore  Makefile  README.md  dictionary.yaml  pyproject.toml
scripts/: build.py  epub_builder.py  find_candidates.py  kindle_builder.py  models.py  stardict_builder.py
templates/epub/: content.opf.jinja  dictionary.xhtml.jinja  toc.ncx.jinja
templates/kindle/: content.opf.jinja  dictionary.html.jinja
tests/: test_build.py  test_candidates.py  test_epub.py  test_kindle.py  test_schema.py  test_stardict.py
