[project]
name = "bobiverse-dict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ebooklib>=0.20",
    "lxml>=6.1.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "wordfreq>=3.1.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
